--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Clubbuda</title>
 </head>
 
 
 
 <body>
     
-
-    
-<H1>BUDA</H1>
-
-
-
+    <div>
+    <img src="logo.PNG" alt="" class="center">
+</div>
 
 
 </body>
