--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
+  <script src="api.js"></script>
+  <script src="https://kit.fontawesome.com/12c9f320ba.js" crossorigin="anonymous"></script>
   <title>ClubBuda</title>
 </head>
 
@@ -64,32 +66,91 @@
 
 
 
-<div class="clasesparent" id="clasesparent">
-  <div class="clases d-flex flex-column align-items-center">
+  <div class="clasesparent" id="clasesparent">
+    <div class="clases d-flex flex-column rounded">
 
-    <h2 class="m-2">¡Descubre nuestras clases de kickboxing y muay thai!</h2>
+      <h2 class="mt-2 mb-4 text-center">¡Descubre nuestras clases de kickboxing y muay thai!</h2>
 
-    <p class="m-2">Nuestro club ofrece clases para todos los niveles, desde principiantes hasta avanzados. Con entrenadores
-      expertos, te ayudaremos a desarrollar tus habilidades y alcanzar tus objetivos en estas disciplinas de combate.
-    </p>
+      <p class="m-2">Nuestro club ofrece clases para todos los niveles, desde principiantes hasta avanzados. Con
+        entrenadores
+        expertos, te ayudaremos a desarrollar tus habilidades y alcanzar tus objetivos en estas disciplinas de combate.
+      </p>
 
-    <p class="m-2"> Mejora tu condición física, aprende técnicas de defensa personal.</p>
+      <p class="m-2"> Mejora tu condición física, aprende técnicas de defensa personal.</p>
 
-    <p class="m-2"> ¡Únete a nosotros y comienza tu viaje de automejora y superación personal en el kickboxing y el muay thai! ¡Te
-      esperamos ansiosos para entrenar contigo!</p>
+      <p class="m-2"> ¡Únete a nosotros y comienza tu viaje de automejora y superación personal en el kickboxing y el
+        muay thai! ¡Te
+        esperamos ansiosos para entrenar contigo!</p>
 
-      <a href="contactanos.html">
-      <button type="button" class="mt-4 btn btn-light btn-lg">CONTACTANOS</button>
+      <a href="contactanos.html" class="text-center">
+        <button type="button" class="mt-4 btn btn-light btn-lg">CONTACTANOS</button>
       </a>
 
+    </div>
   </div>
-</div>
 
 
 
-
-
-
+  <div class="review">
+    <div class="rbd-core-ui">
+      <div class="rbd-review-slider">
+        <div class="rbd-review-container">
+          <div class="rbd-review review1.1 rbd-curr">
+            <h3 class="rbd-heading">Mucho Compañerismo</h3>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <div class="rbd-content"><img class="rbd-gravatar" src="Claudia.png">Gran club de kick boxing, muay thai y
+              boxeo. Mucho compañerismo, buen ambiente y respeto. Empecé hace un año, sin nada de experiencia y
+              estoy muy contenta con mi progreso.
+              Lo recomiendo al 100%</div>
+            <div class="rbd-footing">
+              <a class="rbd-button rbd-small"
+                href="https://www.google.com/search?hl=en-ES&gl=es&q=CLUB+BUDA,+Kick+Boxing,Boxeo,+Muay+thai,+C.+Antonio+Alcaide+S%C3%A1nchez,+21,+29620+Torremolinos,+M%C3%A1laga&ludocid=7963399499905861399&lsig=AB86z5VH213yx6A8fRKDoOrNk0y0&hl=en&gl=ES#lrd=0xd72fb72f1aef1b9:0x6e83ada73c698717,1,,,,">Read
+                More</a>
+            </div>
+            <div class="rbd-review-meta">Written by Claudia M.</div>
+          </div>
+          <div class="rbd-review review1.2 rbd-next">
+            <h3 class="rbd-heading">Ambiente Increíble!</h3>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <div class="rbd-content"><img class="rbd-gravatar" src="guillaume.png">Muy recomendable, clases muy
+              entretenidas, ambiente increíble y tanto el profesor Carlos como los compañeros son unos cracks.
+              La curva de aprendizaje está bien pensada. Sin duda merece la pena!</div>
+            <div class="rbd-footing">
+              <a class="rbd-button rbd-small"
+                href="https://www.google.com/search?hl=en-ES&gl=es&q=CLUB+BUDA,+Kick+Boxing,Boxeo,+Muay+thai,+C.+Antonio+Alcaide+S%C3%A1nchez,+21,+29620+Torremolinos,+M%C3%A1laga&ludocid=7963399499905861399&lsig=AB86z5VH213yx6A8fRKDoOrNk0y0&hl=en&gl=ES#lrd=0xd72fb72f1aef1b9:0x6e83ada73c698717,1,,,,">Read
+                More</a>
+            </div>
+            <div class="rbd-review-meta">Written by Guillaume P.</div>
+          </div>
+          <div class="rbd-review review1.3">
+            <h3 class="rbd-heading">Habilidad y Pasión </h3>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <i class="fa-solid fa-star" style="color: #fed95a;"></i>
+            <div class="rbd-content"><img class="rbd-gravatar" src="logo.PNG">Tuve la oportunidad de
+              entrenar con Juan Carlos y debo decir que mi experiencia ha sido excepcional. Juan Carlos demuestra una habilidad y pasión
+              impresionantes por el deporte, lo cual se refleja en cada una de sus clases.</div>
+            <div class="rbd-footing">
+              <a class="rbd-button rbd-small"
+                href="https://www.google.com/search?hl=en-ES&gl=es&q=CLUB+BUDA,+Kick+Boxing,Boxeo,+Muay+thai,+C.+Antonio+Alcaide+S%C3%A1nchez,+21,+29620+Torremolinos,+M%C3%A1laga&ludocid=7963399499905861399&lsig=AB86z5VH213yx6A8fRKDoOrNk0y0&hl=en&gl=ES#lrd=0xd72fb72f1aef1b9:0x6e83ada73c698717,1,,,,">Read
+                More</a>
+            </div>
+            <div class="rbd-review-meta">Written by Jose M.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
