change capital to normal Claudia

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <i class="fa-solid fa-star" style="color: #fed95a;"></i>
             <i class="fa-solid fa-star" style="color: #fed95a;"></i>
             <i class="fa-solid fa-star" style="color: #fed95a;"></i>
-            <div class="rbd-content"><img class="rbd-gravatar" src="Claudia.png">Gran club de kick boxing, muay thai y
+            <div class="rbd-content"><img class="rbd-gravatar" src="claudia.png">Gran club de kick boxing, muay thai y
               boxeo. Mucho compañerismo, buen ambiente y respeto. Empecé hace un año, sin nada de experiencia y
               estoy muy contenta con mi progreso.
               Lo recomiendo al 100%</div>
