changing photo review jose

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <i class="fa-solid fa-star" style="color: #fed95a;"></i>
             <i class="fa-solid fa-star" style="color: #fed95a;"></i>
             <i class="fa-solid fa-star" style="color: #fed95a;"></i>
-            <div class="rbd-content"><img class="rbd-gravatar" src="logo.PNG">Tuve la oportunidad de
+            <div class="rbd-content"><img class="rbd-gravatar" src="jose.png">Tuve la oportunidad de
               entrenar con Juan Carlos y debo decir que mi experiencia ha sido excepcional. Juan Carlos demuestra una habilidad y pasión
               impresionantes por el deporte, lo cual se refleja en cada una de sus clases.</div>
             <div class="rbd-footing">
