padding review fix

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <i class="fa-solid fa-star" style="color: #fed95a;"></i>
             <i class="fa-solid fa-star" style="color: #fed95a;"></i>
             <div class="rbd-content"><img class="rbd-gravatar" src="guillaume.png">Muy recomendable, clases muy
-              entretenidas, ambiente increíble y tanto el profesor Carlos como los compañeros son unos cracks.
+              entretenidas, ambiente increíble y tanto el profesor como los compañeros son unos cracks.
               La curva de aprendizaje está bien pensada. Sin duda merece la pena!</div>
             <div class="rbd-footing">
               <a class="rbd-button rbd-small"
@@ -137,8 +137,7 @@
             <i class="fa-solid fa-star" style="color: #fed95a;"></i>
             <i class="fa-solid fa-star" style="color: #fed95a;"></i>
             <i class="fa-solid fa-star" style="color: #fed95a;"></i>
-            <div class="rbd-content"><img class="rbd-gravatar" src="jose.png">Tuve la oportunidad de
-              entrenar con Juan Carlos y debo decir que mi experiencia ha sido excepcional. Juan Carlos demuestra una habilidad y pasión
+            <div class="rbd-content"><img class="rbd-gravatar" src="jose.png">Mi experiencia ha sido excepcional. Juan Carlos demuestra una habilidad y pasión
               impresionantes por el deporte, lo cual se refleja en cada una de sus clases.</div>
             <div class="rbd-footing">
               <a class="rbd-button rbd-small"
