meta description location and change h2 to h1

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Kick Boxing y Muay Thai en Torremolinos | Club Buda </title>
+  <meta name="description" content="Kick Boxing Muay Thai & Boxeo | Club Buda Torremolinos Benálmadena Málaga Costa del sol">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -69,7 +71,7 @@
   <div class="clasesparent" id="clasesparent">
     <div class="clases d-flex flex-column rounded">
 
-      <h2 class="mt-2 mb-4 text-center">¡Descubre nuestras clases de kickboxing y muay thai!</h2>
+      <h1 class="mt-2 mb-4 text-center">¡Clases de kickboxing y Muay Thai en Torremolinos!</h1>
 
       <p class="m-2">Nuestro club ofrece clases para todos los niveles, desde principiantes hasta avanzados. Con
         entrenadores
