--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Kick Boxing y Muay Thai en Torremolinos | Club Buda </title>
+  <title>Club Buda | Kick Boxing y Muay Thai en Torremolinos</title>
   <meta name="description" content="Kick Boxing Muay Thai & Boxeo | Club Buda Torremolinos Benálmadena Málaga Costa del sol">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/png" href="logo.PNG">
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -16,6 +17,19 @@
   <script src="api.js"></script>
   <script src="https://kit.fontawesome.com/12c9f320ba.js" crossorigin="anonymous"></script>
   <title>ClubBuda</title>
+  
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-52ZEKBQEM3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-52ZEKBQEM3');
+</script>
+
+
 </head>
 
 
