remove precio add Boxeo in H1

--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
               <a class="nav-link" href="contactanos.html">Direccion</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Precio</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="contactanos.html">Contacto</a>
             </li>
 
@@ -85,7 +82,7 @@
   <div class="clasesparent" id="clasesparent">
     <div class="clases d-flex flex-column rounded">
 
-      <h1 class="mt-2 mb-4 text-center">¡Clases de kickboxing y Muay Thai en Torremolinos!</h1>
+      <h1 class="mt-2 mb-4 text-center">¡Clases de kickboxing Muay Thai y Boxeo en Torremolinos!</h1>
 
       <p class="m-2">Nuestro club ofrece clases para todos los niveles, desde principiantes hasta avanzados. Con
         entrenadores
